--- a/src/services.html
+++ b/src/services.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Our VA Services</title>
-    <link href="../src/assets/css/output.css" rel="stylesheet" />
+    <link href="./assets/css/output.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="/path-to-your-favicon.png" />
   </head>
   <body class="flex flex-col min-h-screen bg-gray-100">
