--- a/src/booking.html
+++ b/src/booking.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Booking</title>
-    <link href="../src/assets/css/output.css" rel="stylesheet" />
+    <link href="./assets/css/output.css" rel="stylesheet" />
     <link
       rel="icon"
       type="image/png"
