--- a/src/faq.html
+++ b/src/faq.html
@@ -181,9 +181,8 @@
     </div>
 
     <!-- Dynamically loaded navbar & footer script -->
-    <script src="../src/assets/js/navbar.js"></script>
-    <script src="../src/assets/js/footer.js"></script>
-
+    <script src="./assets/js/navbar.js"></script>
+    <script src="./assets/js/footer.js"></script>
     <script>
       // FAQ Accordion Script
       document.querySelectorAll(".faq-question").forEach((item) => {
