--- a/src/apply.html
+++ b/src/apply.html
@@ -134,8 +134,8 @@
     </div>
 
     <!-- Dynamically loaded navbar & footer script -->
-    <script src="../src/assets/js/navbar.js"></script>
-    <script src="../src/assets/js/footer.js"></script>
+    <script src="./assets/js/navbar.js"></script>
+    <script src="./assets/js/footer.js"></script>
     <script>
       // Accordion Functionality
       document.querySelectorAll(".accordion-header").forEach((item) => {
