--- a/src/contact.html
+++ b/src/contact.html
@@ -19,7 +19,7 @@
     </div>
 
     <!-- Dynamically loaded navbar & footer script -->
-    <script src="../src/assets/js/navbar.js"></script>
-    <script src="../src/assets/js/footer.js"></script>
+    <script src="./assets/js/navbar.js"></script>
+    <script src="./assets/js/footer.js"></script>
   </body>
 </html>
