--- a/src/services.html
+++ b/src/services.html
@@ -110,8 +110,8 @@
     </div>
 
     <!-- Dynamically loaded navbar & footer script -->
-    <script src="../src/assets/js/navbar.js"></script>
-    <script src="../src/assets/js/footer.js"></script>
+    <script src="./assets/js/navbar.js"></script>
+    <script src="./assets/js/footer.js"></script>
     <script
       src="https://app.aminos.ai/js/chat_form_plugin.js"
       data-bot-id="18080"
