--- a/src/services.html
+++ b/src/services.html
@@ -113,7 +113,7 @@
     <script src="./assets/js/navbar.js"></script>
     <script src="./assets/js/footer.js"></script>
     <script
-      src="https://app.aminos.ai/js/chat_form_plugin.js"
+      src="https://app.aminos.ai/js/chat_plugin.js"
       data-bot-id="18080"
     ></script>
   </body>
