--- a/src/about.html
+++ b/src/about.html
@@ -7,7 +7,7 @@
     <link href="./assets/css/output.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="/path-to-your-favicon.png" />
   </head>
-  <body class="flex flex-col min-h-screen">
+  <body class="flex flex-col min-h-screen bg-gray-100">
     <div class="flex-grow">
       <div id="navbar"></div>
       <!-- Navbar placeholder -->
@@ -15,6 +15,42 @@
       <!-- Hero Section -->
       <section class="hero bg-blue-500 text-white text-center p-20">
         <h1 class="text-5xl font-bold mb-4">About</h1>
+      </section>
+
+      <!-- Our Story -->
+      <section class="px-4 py-8 md:px-16">
+        <h2 class="text-3xl font-bold text-center mb-4">Our Story</h2>
+        <p class="text-lg text-gray-700 text-center mb-4">
+          Share the mission, vision, and history of your agency. Our journey
+          began in [Year], with a mission to...
+        </p>
+      </section>
+
+      <!-- Meet the Team -->
+      <section class="px-4 py-8 md:px-16">
+        <h2 class="text-3xl font-bold text-center mb-6">Meet the Team</h2>
+        <div class="flex flex-wrap justify-center gap-8">
+          <!-- Team Member 1 -->
+          <div class="team-member max-w-xs">
+            <img
+              src="/path-to-image.jpg"
+              alt="Team Member Name"
+              class="rounded-full w-full mb-4"
+            />
+            <h3 class="text-xl font-bold">Name</h3>
+            <p class="text-gray-600">Position</p>
+          </div>
+          <!-- Repeat for other team members -->
+        </div>
+      </section>
+
+      <!-- Why Us -->
+      <section class="px-4 py-8 md:px-16 bg-blue-100 mt-8">
+        <h2 class="text-3xl font-bold text-center mb-4">Why Us</h2>
+        <p class="text-lg text-gray-700 text-center">
+          Unique selling points and advantages of working with your agency. We
+          offer...
+        </p>
       </section>
     </div>
 
