--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
       <!-- Hero Section -->
       <section class="hero bg-blue-500 text-white text-center py-20 px-4">
         <h1 class="text-4xl lg:text-5xl font-bold mb-4">
-          Find Your Perfect VA Today
+          Find Your Perfect Virtual Assistant Today
         </h1>
         <p class="text-lg lg:text-xl mb-8">
           Connect with skilled virtual assistants and elevate your business
@@ -27,10 +27,10 @@
       </section>
 
       <!-- Main Content Area -->
-      <main class="text-center px-4 lg:px-8">
-        <section class="introduction my-8">
+      <main class="text-center px-4 lg:px-8 my-8">
+        <section class="introduction">
           <h2 class="text-2xl lg:text-3xl font-bold mb-4">Why Choose Us?</h2>
-          <p>
+          <p class="mb-4">
             We provide a hassle-free way to enhance your productivity by
             connecting you with professional virtual assistants tailored to meet
             your business needs.
@@ -49,22 +49,22 @@
         </section>
 
         <!-- Services Snapshot -->
-        <section class="services-snapshot my-8 text-center">
+        <section class="services-snapshot mt-8">
           <h2 class="text-2xl lg:text-3xl font-bold mb-6">Our Services</h2>
           <div
             class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 justify-center mx-auto px-4"
           >
-            <div class="service bg-white rounded-lg shadow px-6 py-8">
+            <div class="service bg-white rounded-lg shadow px-6 py-8 mb-4">
               <h3 class="text-xl font-bold mb-4">Administrative Assistance</h3>
               <p>Handle your administrative tasks with ease.</p>
             </div>
             <!-- Example for another service -->
-            <div class="service bg-white rounded-lg shadow px-6 py-8">
+            <div class="service bg-white rounded-lg shadow px-6 py-8 mb-4">
               <h3 class="text-xl font-bold mb-4">Digital Marketing</h3>
               <p>Boost your online presence and engagement.</p>
             </div>
             <!-- Example for another service -->
-            <div class="service bg-white rounded-lg shadow px-6 py-8">
+            <div class="service bg-white rounded-lg shadow px-6 py-8 mb-4">
               <h3 class="text-xl font-bold mb-4">Content Creation</h3>
               <p>High-quality content for blogs, websites, and social media.</p>
             </div>
@@ -78,9 +78,9 @@
         </section>
 
         <!-- How It Works -->
-        <section class="how-it-works my-8">
+        <section class="how-it-works mt-8">
           <h2 class="text-2xl lg:text-3xl font-bold mb-4">How It Works</h2>
-          <ol class="list-decimal list-inside">
+          <ol class="list-decimal list-inside mb-4">
             <li>Submit your requirements through our website.</li>
             <li>We match you with a virtual assistant that fits your needs.</li>
             <li>
@@ -90,12 +90,12 @@
         </section>
 
         <!-- Testimonials/Trust Signals -->
-        <section class="testimonials my-8">
+        <section class="testimonials mt-8">
           <h2 class="text-2xl lg:text-3xl font-bold mb-4">
             What Our Clients Say
           </h2>
           <div class="testimonial mx-auto" style="max-width: 800px">
-            <blockquote>
+            <blockquote class="mb-4">
               "The virtual assistant they matched me with has been a
               game-changer for my business."
             </blockquote>
@@ -105,13 +105,14 @@
         </section>
 
         <!-- CTA to Book Consultation or Browse Services -->
-        <section class="cta my-8">
-          <h2 class="text-2xl lg:text-3xl font-bold mb-4">
+        <section class="cta mt-8 mb-8 text-center">
+          <h2 class="text-2xl lg:text-3xl font-bold mb-8">
             Ready to Get Started?
           </h2>
           <a
             href="./consultation.html"
             class="bg-blue-500 text-white px-8 py-4 rounded hover:bg-blue-600 transition-colors"
+            style="margin-top: 8px; display: inline-block"
             >Book a Free Consultation</a
           >
         </section>
